# oneccl

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/benchmark/: CMakeLists.txt
examples/benchmark/include/: benchmark.hpp  coll.hpp  config.hpp  cpu_coll.hpp  sycl_coll.hpp  types.hpp
examples/benchmark/src/: benchmark.cpp  transport_impl.hpp
examples/benchmark/src/bcast/: sycl_bcast_coll.hpp
examples/include/: bf16.hpp  sycl_base.hpp
examples/sycl/: sycl_allgatherv_usm_test.cpp
include/oneapi/ccl/native_device_api/empty/: export.hpp
include/oneapi/ccl/native_device_api/l0/: base_impl.hpp
pkgconfig/: pkgconfig_support_checker.sh
src/: CMakeLists.txt  ccl_api_functions.cpp  communicator_impl_details.hpp
src/atl/: atl.h  atl_base_comm.cpp  atl_base_comm.hpp  atl_def.h  atl_mpi_comm.cpp  atl_mpi_comm.hpp  atl_mpi_global_data.cpp  atl_mpi_global_data.hpp  atl_ofi_comm.cpp  atl_ofi_comm.hpp  atl_wrapper.cpp
src/atl/mpi/: atl_mpi.cpp  atl_mpi.hpp  atl_mpi_global_data.cpp  atl_mpi_global_data.hpp  atl_mpi_impl.cpp
src/atl/ofi/: atl_ofi.cpp  atl_ofi.hpp  atl_ofi_helper.cpp  atl_ofi_helper.hpp  atl_ofi_impl.cpp
src/coll/: coll.cpp  coll_check.cpp  coll_check.hpp  coll_param.cpp  coll_param.hpp  coll_util.cpp  coll_util.hpp
src/coll/algorithms/: algorithm_utils.cpp  algorithms.hpp  algorithms_enum.hpp  allgatherv.cpp  bcast.cpp  double_tree_ops.cpp  reduce.cpp  reduce_scatter.cpp
src/coll/algorithms/allreduce/: allreduce.cpp  allreduce_2d.cpp
src/coll/algorithms/sparse_allreduce/: sparse_allreduce.hpp
src/coll/selection/: selection.cpp  selection.hpp  selector.hpp  selector_allgatherv.cpp  selector_allreduce.cpp  selector_alltoallv.cpp  selector_bcast.cpp  selector_helper.hpp  selector_impl.hpp  selector_reduce.cpp  selector_reduce_scatter.cpp
src/common/comm/: comm.cpp  comm.hpp  compiler_comm_interface_dispatcher.cpp
src/common/comm/host_communicator/: host_communicator.cpp  host_communicator.hpp  host_communicator_impl.hpp
src/common/comm/l0/: comm_context_storage.cpp
src/common/comm/l0/devices/: ccl_ipc_gpu_comm.cpp
src/common/comm/single_device_communicator/: single_device_base.hpp  single_device_communicator.cpp  single_device_communicator_impl.hpp
src/common/env/: env.cpp  env.hpp
src/common/global/: global.cpp  global.hpp
src/common/stream/: stream.cpp  stream.hpp  stream_provider_dispatcher.hpp  stream_provider_dispatcher_impl.hpp
src/common/utils/: sycl_utils.hpp  utils.hpp
src/comp/: comp.cpp
src/comp/fp16/: fp16_utils.hpp
src/exec/: exec.cpp
src/exec/thread/: base_thread.hpp  worker.cpp
src/fusion/: fusion.cpp
src/hwloc/: hwloc_wrapper.cpp
src/native_device_api/: compiler_ccl_wrappers_dispatcher.hpp  interop_utils.cpp
src/native_device_api/l0/: device.cpp
src/native_device_api/sycl/: export.cpp
src/native_device_api/sycl_l0/: export.cpp
src/parallelizer/: parallelizer.cpp  parallelizer.hpp
src/sched/: master_sched.cpp  master_sched.hpp  sched.cpp  sched.hpp  sched_base.cpp  sched_base.hpp  sched_timer.cpp  sched_timer.hpp  ze_handle_manager.cpp  ze_handle_manager.hpp  ze_ipc_event_pool_manager.cpp
src/sched/cache/: key.cpp
src/sched/entry/: deregister_entry.hpp  entry.cpp  entry.hpp  probe_entry.hpp  recv_entry.hpp  recv_reduce_entry.hpp  reduce_local_entry.cpp  reduce_local_entry.hpp  register_entry.hpp  send_entry.hpp  write_entry.hpp
src/sched/entry/coll/: coll_entry.cpp  coll_entry_helper.cpp  coll_entry_helper.hpp  coll_entry_param.hpp
src/sched/entry/copy/: copy_entry.cpp  copy_entry.hpp  copy_helper.cpp  copy_helper.hpp  sycl_copy_entry.hpp
src/sched/entry/factory/: chunked_entry_factory.cpp  entry_factory.hpp
src/sched/entry/gpu/: ze_allreduce_entry.cpp  ze_allreduce_entry.hpp  ze_base_entry.cpp  ze_base_entry.hpp  ze_cache.cpp  ze_cache.hpp  ze_call.cpp  ze_call.hpp  ze_event_signal_entry.hpp  ze_event_wait_entry.hpp  ze_handle_exchange_entry.cpp  ze_handle_exchange_entry.hpp  ze_primitives.cpp  ze_primitives.hpp
src/sched/entry/l0/: l0_allgather_handles_entry.hpp  l0_allgatherv_typed_entry.hpp  l0_allreduce_typed_entry.hpp  l0_alltoallv_typed_entry.hpp  l0_bcast_typed_entry.hpp  l0_entry.hpp  l0_reduce_scatter_typed_entry.hpp  l0_reduce_typed_entry.hpp
src/sched/entry/ze/: ze_a2a_allgatherv_entry.cpp  ze_a2a_allgatherv_entry.hpp  ze_a2a_gatherv_entry.hpp  ze_a2a_reduce_scatter_entry.cpp  ze_a2a_reduce_scatter_entry.hpp  ze_barrier_entry.hpp  ze_base_entry.cpp  ze_base_entry.hpp  ze_cache.cpp  ze_cache.hpp  ze_call.cpp  ze_copy_entry.cpp  ze_copy_entry.hpp  ze_event_signal_entry.cpp  ze_event_signal_entry.hpp  ze_event_wait_entry.cpp  ze_event_wait_entry.hpp  ze_handle_exchange_entry.cpp  ze_handle_exchange_entry.hpp  ze_onesided_reduce_entry.cpp  ze_onesided_reduce_entry.hpp  ze_primitives.cpp  ze_primitives.hpp  ze_reduce_local_entry.cpp  ze_reduce_local_entry.hpp
src/unordered_coll/: unordered_coll.cpp
tests/functional/: CMakeLists.txt  test.hpp  test_impl.hpp  transport.cpp
tests/functional/regression/: CMakeLists.txt  allgatherv_vector.cpp  allreduce_events.cpp  alltoallv_empty_count.cpp
tests/reg_tests/: CMakeLists.txt  run.sh  utils.sh
tests/reg_tests/common/: CMakeLists.txt  pkgconfig_support_checker.cpp  pkgconfig_support_checker.sh  shell_support_check.sh
tests/reg_tests/sycl/: CMakeLists.txt  allgatherv_vector.cpp  allgatherv_vector.sh  allreduce_events.cpp  allreduce_events.sh  alltoallv_empty_count.cpp  alltoallv_empty_count.sh
(+22 files in other folders)
